--- a/template/index.html
+++ b/template/index.html
@@ -417,7 +417,7 @@
       <section class="main-container">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 order-lg-2">
+            <div class="col-lg-6 order-lg-2 youtube-frame">
               <div class="overlay-container overlay-visible bordered">
                 <img src="images/about-bg-image.png" alt="">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>
@@ -428,12 +428,10 @@
             </div>
             <div class="col-lg-6 order-lg-1">
               <h3 class="title">Sobre a MVisia</h3>
-              <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional
-                e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.
-                O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de
-                análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>. Desenvolvemos também
-                a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
-              <a href="" class="btn radius-2 btn-default btn-hvr hvr-shutter-out-horizontal">Saiba mais</a>
+              <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
+              <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>.</p>
+              <p>Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
+              <a class="btn radius-2 btn-default btn-hvr btn-animated" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -441,13 +439,13 @@
       <!-- section end -->
 
       <!-- section start -->     
-      <section class="light-gray-bg pv-45 clearfix">
+      <section id="technology-section" class="dark-translucent-bg pv-55 clearfix">
         <div class="container">
           <div class="row">
             <div class="main col-md-12">
               <h2 class="page-title text-center">Tecnologias</h2>
               <div class="separator"></div>
-              <h3 class="page-subtitle text-center">Somos especialistas em desenvolvimento de softwares inteligentes para o reconhecimento<br> de características visuais por meio de algoritmos próprios e exclusivos.</h3>
+              <h4 class="page-subtitle text-center">Somos especialistas em desenvolvimento de softwares inteligentes para o reconhecimento<br> de características visuais por meio de algoritmos próprios e exclusivos.</h4>
               <br>
 
               <div class="row">
@@ -457,7 +455,7 @@
                     <h3>Visão Computacional</h3>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos processamento de imagens<br> para automatizar inspeções visuais e<br> aumentar a sua acurácia.</p>
-                    <a href="">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated" href="page-technology-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
                 <div class="col-md-4 ">
@@ -466,7 +464,7 @@
                     <h3>Inteligência Artificial</h3>
                     <div class="separator clearfix"></div>
                     <p>O aprendizado de máquina e o uso<br> de redes neurais nos auxiliam no<br> reconhecimento de padrões.</p>
-                    <a href="">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated" href="page-technology-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
                 <div class="col-md-4 ">
@@ -475,7 +473,7 @@
                     <h3>Câmeras Hiperespectrais</h3>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos câmeras hiperespectrais para<br> analisar características que não podem<br> ser vistas com câmeras tradicionais.</p>
-                    <a href="">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated" href="page-technology-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -669,48 +667,10 @@
 
       <!-- section start -->
       <!-- ================ -->
-      <section class="pv-45">
-        <div class="container">
+      <section>
+        <div class="main-container">
           <h2 class="page-title text-center">Clientes</h2>
           <div class="separator"></div>
-          <!-- clients testimonial start -->
-          <!--<div class="row">
-            <div class="col-lg-9">
-              <div class="owl-carousel content-slider">
-                <div class="testimonial text-center">
-                  <div class="testimonial-image">
-                    <img src="images/testimonial-1.jpg" alt="Jane Doe" title="Jane Doe" class="rounded-circle">
-                  </div>
-                  <h3>Just Perfect!</h3>
-                  <div class="separator"></div>
-                  <div class="testimonial-body">
-                    <blockquote>
-                      <p>Sed ut perspiciatis unde omnis iste natu error sit voluptatem accusan tium dolore laud antium, totam rem dolor sit amet tristique pulvinar, turpis arcu rutrum nunc, ac laoreet turpis augue a justo.</p>
-                    </blockquote>
-                    <div class="testimonial-info-1">- Jane Doe</div>
-                    <div class="testimonial-info-2">By Company</div>
-                  </div>
-                </div>
-                <div class="testimonial text-center">
-                  <div class="testimonial-image">
-                    <img src="images/testimonial-2.jpg" alt="Jane Doe" title="Jane Doe" class="rounded-circle">
-                  </div>
-                  <h3>Amazing!</h3>
-                  <div class="separator"></div>
-                  <div class="testimonial-body">
-                    <blockquote>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et cupiditate deleniti ratione in. Expedita nemo, quisquam, fuga adipisci omnis ad mollitia libero culpa nostrum est quia eos esse vel!</p>
-                    </blockquote>
-                    <div class="testimonial-info-1">- Jane Doe</div>
-                    <div class="testimonial-info-2">By Company</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>-->
-          <!-- clients testimonial end-->
-          <!-- clients start -->
-          <!-- ================ -->
           <div class="clients-container">
             <div class="clients">
               <div class="client-image object-non-visible" data-animation-effect="fadeIn" data-effect-delay="100">
