--- a/template/page-about.html
+++ b/template/page-about.html
@@ -652,6 +652,31 @@
       </div>
       <!-- header-container end -->
 
+      <!-- banner start -->
+      <!-- ================ -->
+      <div class="banner border-clear light-translucent-bg" style="background-image:url('images/page-about-banner-2.jpg');">
+        <!-- breadcrumb start -->
+        <!-- ================ -->
+        <div class="breadcrumb-container">
+          <div class="container">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><i class="fa fa-home pr-2"></i><a class="link-dark" href="index.html">Home</a></li>
+              <li class="breadcrumb-item active">Page About 3</li>
+            </ol>
+          </div>
+        </div>
+        <!-- breadcrumb end -->
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 pv-20">
+              <h2 class="title"><strong>Wellcome</strong> To The Project</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi perferendis magnam ea necessitatibus, officiis voluptas odit! Aperiam omnis, cupiditate laudantium velit nostrum, exercitationem accusamus, possimus soluta illo deserunt tempora qui.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- banner end -->
+
       <!-- main-container start -->
       <!-- ================ -->
       <section class="main-container padding-bottom-clear">
