--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -7,3 +7,12 @@ Created:December 2014
 License URI:http://support.wrapbootstrap.com/
 File Description: Place here your custom CSS styles
 */
+
+
+.youtube-frame {
+    padding-left: 75px;
+}
+
+.btn {
+    font-weight: 300;
+}
