--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -46,20 +46,15 @@ body {
 h1,
 h2,
 h3,
-h4,
 h5,
 h6 {
   color: #333333;
   line-height: 1.2;
 }
 
-h1 a,
-h2 a,
-h3 a,
-h4 a,
-h5 a,
-h6 a {
-  color: #333333;
+h4 {
+  color: #777777;
+  font-weight: 200;
 }
 
 .text-white h1,
@@ -136,7 +131,7 @@ h1.large {
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 1.8rem;
   margin-bottom: 15px;
   text-transform: uppercase;
   font-weight: 500;
@@ -147,11 +142,11 @@ h2.logo-font {
 }
 
 h3 {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 h4 {
-  font-size: 19px;
+  font-size: 1.1rem;
 }
 
 h5 {
