--- a/template/index.html
+++ b/template/index.html
@@ -418,7 +418,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 order-lg-2 youtube-frame">
-              <div class="overlay-container overlay-visible bordered">
+              <div class="bordered">
                 <img src="images/about-bg-image.png" alt="">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>
                 <div class="overlay-bottom hidden-sm-down">
