--- a/template/css/style.css
+++ b/template/css/style.css
@@ -33,7 +33,7 @@ img {
 /* Lists
 ---------------------------------- */
 ul {
-  list-style: square;
+  list-style-type: none;
 }
 
 .list-icons,
@@ -390,6 +390,10 @@ ul {
 .dark-translucent-bg h5,
 .dark-translucent-bg h6 {
   color: #ffffff;
+}
+
+.dark-translucent-bg.tech, .dark-translucent-bg.tech h3 {
+  color: #333333;
 }
 
 .dark-translucent-bg a:not(.btn) {
@@ -755,8 +759,7 @@ h5 + .separator {
   margin-top: 15px;
 }
 
-.separator-2,
-.separator-3 {
+.separator-2 {
   width: 100%;
   margin-bottom: 15px;
   position: relative;
@@ -837,101 +840,8 @@ h5 + .separator {
   }
 }
 
-.separator-3:after {
-  height: 1px;
-  background: #d1d1d1;
-  background: -moz-linear-gradient(right, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0.12) 35%, rgba(0, 0, 0, 0.05) 70%, transparent 100%);
-  background: -webkit-gradient(linear, right top, left top, color-stop(0%, rgba(0, 0, 0, 0.18)), color-stop(35%, rgba(0, 0, 0, 0.12)), color-stop(70%, rgba(0, 0, 0, 0.05)), color-stop(100%, transparent));
-  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0.12) 35%, rgba(0, 0, 0, 0.05) 70%, transparent 100%);
-  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0.12) 35%, rgba(0, 0, 0, 0.05) 70%, transparent 100%);
-  background: -ms-linear-gradient(right, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0.12) 35%, rgba(0, 0, 0, 0.05) 70%, transparent 100%);
-  background: linear-gradient(to left, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0.12) 35%, rgba(0, 0, 0, 0.05) 70%, transparent 100%);
-  position: absolute;
-  bottom: -1px;
-  left: 0px;
-  content: "";
-  width: 100%;
-}
-
-.dark-bg .separator-3:after {
-  background: #666666;
-  background: -moz-linear-gradient(right, #666666 0%, #555555 35%, #444444 70%, #373737 100%);
-  background: -webkit-gradient(linear, right top, left top, color-stop(0%, #666666), color-stop(35%, #555555), color-stop(70%, #444444), color-stop(100%, #373737));
-  background: -webkit-linear-gradient(right, #666666 0%, #555555 35%, #444444 70%, #373737 100%);
-  background: -o-linear-gradient(right, #666666 0%, #555555 35%, #444444 70%, #373737 100%);
-  background: -ms-linear-gradient(right, #666666 0%, #555555 35%, #444444 70%, #373737 100%);
-  background: linear-gradient(to left, #666666 0%, #555555 35%, #444444 70%, #373737 100%);
-}
-
-#footer.dark .separator-3:after {
-  background: #444444;
-  background: -moz-linear-gradient(right, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
-  background: -webkit-gradient(linear, right top, left top, color-stop(0%, #444444), color-stop(35%, #393939), color-stop(70%, #323232), color-stop(100%, #222222));
-  background: -webkit-linear-gradient(right, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
-  background: -o-linear-gradient(right, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
-  background: -ms-linear-gradient(right, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
-  background: linear-gradient(to left, #444444 0%, #393939 35%, #323232 70%, #222222 100%);
-}
-
-.light-translucent-bg .separator-3:after,
-.two-col-translucent-bg .container > .row > div .separator-3:after,
-.dark.separator-3:after {
-  background: rgba(0, 0, 0, 0.5);
-  background: -moz-linear-gradient(right, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
-  background: -webkit-gradient(linear, right top, left top, color-stop(0%, rgba(0, 0, 0, 0.5)), color-stop(35%, rgba(232, 232, 232, 0.4)), color-stop(70%, rgba(232, 232, 232, 0.2)), color-stop(100%, transparent));
-  background: -webkit-linear-gradient(right, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
-  background: -o-linear-gradient(right, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
-  background: -ms-linear-gradient(right, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
-  background: linear-gradient(to left, rgba(0, 0, 0, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, transparent 100%);
-}
-
-.default-bg .separator-3:after,
-.default-translucent-bg .separator-3:after,
-.dark-translucent-bg .separator-3:after,
-.light.separator-3:after {
-  background: rgba(255, 255, 255, 0.5);
-  background: -moz-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-  background: -webkit-gradient(linear, right top, left top, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(35%, rgba(232, 232, 232, 0.4)), color-stop(70%, rgba(232, 232, 232, 0.2)), color-stop(100%, rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-  background: -o-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-  background: -ms-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-  background: linear-gradient(to left, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-}
-
-/* Medium devices (desktops, tablets, 992px and up) */
-@media (min-width: 992px) {
-  .two-col-translucent-bg .container > .row > div + div .separator-3:after {
-    background: rgba(255, 255, 255, 0.5);
-    background: -moz-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-    background: -webkit-gradient(linear, right top, left top, color-stop(0%, rgba(255, 255, 255, 0.5)), color-stop(35%, rgba(232, 232, 232, 0.4)), color-stop(70%, rgba(232, 232, 232, 0.2)), color-stop(100%, rgba(255, 255, 255, 0)));
-    background: -webkit-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-    background: -o-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-    background: -ms-linear-gradient(right, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(to left, rgba(255, 255, 255, 0.5) 0%, rgba(232, 232, 232, 0.4) 35%, rgba(232, 232, 232, 0.2) 70%, rgba(255, 255, 255, 0) 100%);
-  }
-}
-
-.footer-content .separator-2,
-.footer-content .separator-3 {
-  margin-bottom: 25px;
-}
-
 /* Miscellaneous
 ---------------------------------- */
-.absolute-positioned-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.absolute-positioned-bottom {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  top: auto;
-  width: 100%;
-}
 
 .pl-5 {
   padding-left: 5px;
@@ -1068,12 +978,6 @@ h5 + .separator {
   -webkit-border-radius: 100% !important;
   -moz-border-radius: 100% !important;
   border-radius: 100% !important;
-}
-
-.radius-clear {
-  -webkit-border-radius: 0% !important;
-  -moz-border-radius: 0% !important;
-  border-radius: 0% !important;
 }
 
 /* Small devices (tablets, phones less than 767px) */
@@ -2178,7 +2082,6 @@ h5 + .separator {
   margin-top: 0px;
 }
 
-/*style-1*/
 .feature-box h3 {
   margin-top: 0;
 }
@@ -2686,6 +2589,10 @@ h5 + .separator {
   width: 100%;
 }
 
+.page-loader-1 .pace-inactive {
+  display: none;
+}
+
 /* 6 Navigations
 ----------------------------------------------------------------------------- */
 /* 6.1 Light Version
@@ -3084,7 +2991,11 @@ h5 + .separator {
 }
 
 #logo {
-  width: 135px;
+  width: 145px;
+}
+
+#logo-mobile {
+  width: 125px;
 }
 
 .header.centered #logo img {
@@ -3404,19 +3315,6 @@ h5 + .separator {
   color: #ffffff;
 }
 
-.social-links.animated-effect-1 li.flickr a:hover {
-  border-color: #ff0084;
-}
-
-.social-links:not(.animated-effect-1) li.flickr a:hover,
-.colored.social-links li.flickr a,
-.social-links.animated-effect-1 li.flickr a:after,
-.btn.flickr {
-  background-color: #ff0084;
-  border-color: #ff0084;
-  color: #ffffff;
-}
-
 .social-links.animated-effect-1 li.facebook a:hover {
   border-color: #3b5998;
 }
@@ -3427,149 +3325,6 @@ h5 + .separator {
 .btn.facebook {
   background-color: #3b5998;
   border-color: #3b5998;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.pinterest a:hover {
-  border-color: #cb2027;
-}
-
-.social-links:not(.animated-effect-1) li.pinterest a:hover,
-.colored.social-links li.pinterest a,
-.social-links.animated-effect-1 li.pinterest a:after,
-.btn.pinterest {
-  background-color: #cb2027;
-  border-color: #cb2027;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.instagram a:hover {
-  border-color: #517fa4;
-}
-
-.social-links:not(.animated-effect-1) li.instagram a:hover,
-.colored.social-links li.instagram a,
-.social-links.animated-effect-1 li.instagram a:after,
-.btn.instagram {
-  background-color: #517fa4;
-  border-color: #517fa4;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.vimeo a:hover {
-  border-color: #aad450;
-}
-
-.social-links:not(.animated-effect-1) li.vimeo a:hover,
-.colored.social-links li.vimeo a,
-.social-links.animated-effect-1 li.vimeo a:after,
-.btn.vimeo {
-  background-color: #aad450;
-  border-color: #aad450;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.tumblr a:hover {
-  border-color: #32506d;
-}
-
-.social-links:not(.animated-effect-1) li.tumblr a:hover,
-.colored.social-links li.tumblr a,
-.social-links.animated-effect-1 li.tumblr a:after,
-.btn.tumblr {
-  background-color: #32506d;
-  border-color: #32506d;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.soundcloud a:hover {
-  border-color: #ff3a00;
-}
-
-.social-links:not(.animated-effect-1) li.soundcloud a:hover,
-.colored.social-links li.soundcloud a,
-.social-links.animated-effect-1 li.soundcloud a:after,
-.btn.soundcloud {
-  background-color: #ff3a00;
-  border-color: #ff3a00;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.foursquare a:hover {
-  border-color: #0072b1;
-}
-
-.social-links:not(.animated-effect-1) li.foursquare a:hover,
-.colored.social-links li.foursquare a,
-.social-links.animated-effect-1 li.foursquare a:after,
-.btn.foursquare {
-  background-color: #0072b1;
-  border-color: #0072b1;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.dribbble a:hover {
-  border-color: #ea4c89;
-}
-
-.social-links:not(.animated-effect-1) li.dribbble a:hover,
-.colored.social-links li.dribbble a,
-.social-links.animated-effect-1 li.dribbble a:after,
-.btn.dribbble {
-  background-color: #ea4c89;
-  border-color: #ea4c89;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.xing a:hover {
-  border-color: #126567;
-}
-
-.social-links:not(.animated-effect-1) li.xing a:hover,
-.colored.social-links li.xing a,
-.social-links.animated-effect-1 li.xing a:after,
-.btn.xing {
-  background-color: #126567;
-  border-color: #126567;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.behance a:hover {
-  border-color: #126567;
-}
-
-.social-links:not(.animated-effect-1) li.behance a:hover,
-.colored.social-links li.behance a,
-.social-links.animated-effect-1 li.behance a:after,
-.btn.behance {
-  background-color: #053eff;
-  border-color: #053eff;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.vine a:hover {
-  border-color: #126567;
-}
-
-.social-links:not(.animated-effect-1) li.vine a:hover,
-.colored.social-links li.vine a,
-.social-links.animated-effect-1 li.vine a:after,
-.btn.vine {
-  background-color: #00a478;
-  border-color: #00a478;
-  color: #ffffff;
-}
-
-.social-links.animated-effect-1 li.stumbleupon a:hover {
-  border-color: #126567;
-}
-
-.social-links:not(.animated-effect-1) li.stumbleupon a:hover,
-.colored.social-links li.stumbleupon a,
-.social-links.animated-effect-1 li.stumbleupon a:after,
-.btn.stumbleupon {
-  background-color: #f74425;
-  border-color: #f74425;
   color: #ffffff;
 }
 
@@ -3601,7 +3356,7 @@ h5 + .separator {
 .social-links .dropdown-menu {
   z-index: 103;
   padding: 5px;
-  min-width: 270px;
+  min-width: 110px;
   margin-top: 6px;
   font-size: 0;
   -webkit-box-shadow: none;
