--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -57,6 +57,10 @@ h4 {
   font-weight: 200;
 }
 
+h4.page-subtitle {
+  margin-bottom: 2.0rem;
+}
+
 .text-white h1,
 .text-white h2,
 .text-white h3,
