progess 24.02 part II

--- a/template/index.html
+++ b/template/index.html
@@ -29,6 +29,9 @@
     <!-- Font Awesome CSS -->
     <link href="fonts/font-awesome/css/font-awesome.css" rel="stylesheet">
 
+    <!-- Fontello CSS -->
+    <link href="fonts/fontello/css/fontello.css" rel="stylesheet">
+
     <!-- Plugins -->
     <link href="plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
     <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
@@ -403,8 +406,8 @@
       <section class="main-container">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 order-lg-2 youtube-frame">
-              <div class="bordered">
+            <div class="col-lg-6 order-lg-2">
+              <div class="overlay-container bordered">
                 <img src="images/about-bg-image.png" alt="">
                 <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>
                 <div class="overlay-bottom hidden-sm-down">
@@ -417,6 +420,7 @@
               <p>A MVisia desenvolve <strong>máquinas e sistemas baseados em visão computacional e inteligência artificial</strong> para determinar o índice de qualidade de produtos agrícolas.</p>
               <p>O princípio de nossas soluções é um sistema que captura imagens e as envia para um software de análise, que considera <strong>parâmetros relevantes para a seleção de cada produto</strong>.</p>
               <p>Desenvolvemos também a <strong>estrutura mecatrônica</strong> para viabilizar o processo de acordo com a produtividade necessária para o cliente.</p>
+              <p>Trazemos <strong>eficiência, redução de custos e aumento de qualidade</strong> para sistemas de produção da <strong>agroindústria</strong>, utilizando <strong>visão computacional e inteligência artificial.</strong></p>
               <a class="btn radius-2 btn-default btn-hvr btn-animated" href="page-about.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
@@ -498,7 +502,7 @@
               <h3>Tomate</h3>
               <div class="separator"></div>
               <p>Calibradora eletrônica de<br> tomates miúdos</p>
-              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated" href="page-case-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -514,7 +518,7 @@
               <h3>Uva</h3>
               <div class="separator"></div>
               <p>Sistema automático de<br> qualificação de uvas</p>
-              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated" href="page-case-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -530,8 +534,7 @@
               <h3>Eucalipto</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas florestais</p>
-              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
-              <!--<a href="#" class="btn btn-gray-transparent btn-animated btn-sm margin-clear">Read More<i class="fa fa-arrow-right pl-10"></i></a>-->
+              <a class="btn btn-transparent btn-animated" href="page-case-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -547,7 +550,7 @@
               <h3>Flores</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas de flores</p>
-              <a href="#">Saiba mais<i class="pl-1 fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated" href="page-case-4.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
