--- a/template/css/style.css
+++ b/template/css/style.css
@@ -717,8 +717,7 @@ ul {
 
 .default-bg .separator:after,
 .dark-translucent-bg .separator:after,
-.default-translucent-bg .separator:after,
-.light.separator:after {
+.default-translucent-bg .separator:after {
   background: rgba(255, 255, 255, 0.5);
   background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 35%, rgba(255, 255, 255, 0.5) 70%, rgba(255, 255, 255, 0) 100%);
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(35%, rgba(255, 255, 255, 0.5)), color-stop(70%, rgba(255, 255, 255, 0.5)), color-stop(100%, rgba(255, 255, 255, 0)));
@@ -1995,6 +1994,68 @@ h5 + .separator {
   color: #999999;
 }
 
+/* Breadcrumb
+---------------------------------- */
+.breadcrumb-container {
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.dark.breadcrumb-container {
+  background-color: #777777;
+  border-color: #333333;
+  color: #ffffff;
+}
+
+.breadcrumb {
+  background-color: transparent;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  padding: 8px 15px 8px 0;
+}
+
+.breadcrumb-item + .breadcrumb-item:before {
+  font-family: "FontAwesome";
+  content: "\f101";
+  font-size: 11px;
+  padding: 0 7px;
+  color: #cccccc;
+}
+
+.banner .breadcrumb-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.85);
+  border-bottom-color: rgba(255, 255, 255, 0.1);
+}
+
+.banner .dark.breadcrumb-container {
+  border-bottom-color: rgba(119, 119, 119, 0.1);
+}
+
+.banner .breadcrumb .breadcrumb-item a,
+.banner .breadcrumb .breadcrumb-item i {
+  color: #000000;
+}
+
+.banner .breadcrumb .breadcrumb-item.active,
+.banner .breadcrumb-item + .breadcrumb-item:before {
+  color: #777777;
+}
+
+.dark .breadcrumb .breadcrumb-item a,
+.dark .breadcrumb .breadcrumb-item i,
+.dark .breadcrumb > .active,
+.banner .dark .breadcrumb > .active,
+.dark .breadcrumb .breadcrumb-item + .breadcrumb-item:before {
+  color: #ffffff;
+}
+
 /* Collapse
 ---------------------------------- */
 /*Content Collapse*/
@@ -2084,6 +2145,22 @@ h5 + .separator {
 
 .feature-box h3 {
   margin-top: 0;
+}
+
+.feature-box .separator:after {
+  height: 1px;
+  background: #e8e8e8;
+  background: -moz-linear-gradient(left, transparent 0%, rgba(0, 0, 0, 0.09) 35%, rgba(0, 0, 0, 0.09) 70%, transparent 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(0%, transparent), color-stop(35%, rgba(0, 0, 0, 0.09)), color-stop(70%, rgba(0, 0, 0, 0.09)), color-stop(100%, transparent));
+  background: -webkit-linear-gradient(left, transparent 0%, rgba(0, 0, 0, 0.09) 35%, rgba(0, 0, 0, 0.09) 70%, transparent 100%);
+  background: -o-linear-gradient(left, transparent 0%, rgba(0, 0, 0, 0.09) 35%, rgba(0, 0, 0, 0.09) 70%, transparent 100%);
+  background: -ms-linear-gradient(left, transparent 0%, rgba(0, 0, 0, 0.09) 35%, rgba(0, 0, 0, 0.09) 70%, transparent 100%);
+  background: linear-gradient(to right, transparent 0%, rgba(0, 0, 0, 0.09) 35%, rgba(0, 0, 0, 0.09) 70%, transparent 100%);
+  position: absolute;
+  bottom: -1px;
+  content: "";
+  width: 100%;
+  left: 0;
 }
 
 .feature-box .icon {
