--- a/template/css/typography-default.css
+++ b/template/css/typography-default.css
@@ -61,6 +61,10 @@ h4.page-subtitle {
   margin-bottom: 2.0rem;
 }
 
+h2.title {
+  font-size: 2.5rem;
+}
+
 .text-white h1,
 .text-white h2,
 .text-white h3,
