--- a/template/page-about.html
+++ b/template/page-about.html
@@ -215,7 +215,7 @@
 
       <!-- banner start -->
       <!-- ================ -->
-      <div class="banner dark-translucent-bg" style="background-image:url('images/page-about-banner-1.png'); background-position: 50% 27%;">
+      <div class="banner dark-translucent-bg" style="background-image:url('images/page-about-banner.png'); background-position: 50% 27%;">
         <!-- breadcrumb start -->
         <!-- ================ -->
         <!--<div class="breadcrumb-container">
@@ -231,6 +231,7 @@
           <div class="row justify-content-lg-center">
             <div class="col-lg-8 text-center pv-20">
               <h2 class="title">Sobre a MVisia</h2>
+              <div class="separator"></div>
             </div>
           </div>
         </div>
@@ -254,35 +255,24 @@
                   <p>A empresa existe desde 2012, quando foi incubada no CIETEC-USP, e já desenvolveu soluções para os setores de hortifrúti, flores e mudas florestais. Tivemos dois dos nossos projetos financiados pela FAPESP e também mantemos estreitas relações com o ecossistema de inovação, com diversos prêmios ganhos, como o Prêmio Santander de Empreendedorismo e o Prêmio Odebrecht Sustentabilidade.</p> 
                 </div>
                 <div class="col-lg-6">
+                  
                   <div class="owl-carousel content-slider-with-controls">
                     <div class="overlay-container overlay-visible">
                       <img src="images/page-about-1.png" alt="">
-                      </div>
-                      <a href="images/page-about-1.jpg" class="owl-carousel--popup-img overlay-link" title="image title"><i class="icon-plus-1"></i></a>
                     </div>
                     <div class="overlay-container overlay-visible">
-                      <img src="images/page-about-2.jpg" alt="">
-                      <div class="overlay-bottom hidden-sm-down">
-                        <div class="text">
-                          <h3 class="title">You Can Trust Us</h3>
-                        </div>
-                      </div>
-                      <a href="images/page-about-2.jpg" class="owl-carousel--popup-img overlay-link" title="image title"><i class="icon-plus-1"></i></a>
+                        <img src="images/page-about-2.png" alt="">
                     </div>
                     <div class="overlay-container overlay-visible">
-                      <img src="images/page-about-3.jpg" alt="">
-                      <div class="overlay-bottom hidden-sm-down">
-                        <div class="text">
-                          <h3 class="title">We Love What We Do</h3>
-                        </div>
-                      </div>
-                      <a href="images/page-about-3.jpg" class="owl-carousel--popup-img overlay-link" title="image title"><i class="icon-plus-1"></i></a>
+                        <img src="images/page-about-3.png" alt="">
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
           </div>
+        </div>
 
         <!-- section start -->
         <div class="pv-20 section mt-20">
@@ -316,11 +306,12 @@
         <!-- section start -->
 
         <!-- section start -->
-        <div class="light-gray-bg pv-20 section mt-20">
+        <div class="light-gray-bg pv-70 section mt-20">
           <div class="container">
             <h4 class="mb-20">Nosso <strong>Time</strong></h4>
             <div class="row grid-space-20">
-              <div class="col-md-6 col-lg-3">
+              
+              <div class="col-md-6 col-lg-3 mb-40">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container">
                     <img src="images/team-member-1.png" alt="">
@@ -339,12 +330,13 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-lg-3">
+
+              <div class="col-md-6 col-lg-3 mb-40">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container">
                     <img src="images/team-member-2.png" alt="">
                     <div class="overlay-bottom">
-                      <p class="small margin-clear">Cuida das áreas financeira e contábil, além de ser o responsável pelo operacional interno da empresa (jurídico, rh, compras...). Atuou no projeto mecânico de um sistema de transmissão para a equipe Poli Racing de Fórmula SAE, trabalhou na liga de mercado financeiro da Escola Politécnica e estagiou no HSBC Asset Management Group na área de Macro and Strategy Research (Quantitative Analysis), sendo finalista do Campeonato de Algoritmos para Mercado Financeiro, organizado pela Corretora Souza Barros. Realizou o curso Creativity, Innovation & New Businesses na Fondazione CUOA (Vicenza – Itália).</p>
+                      <p class="small margin-clear">Cuida das áreas financeira e contábil, além de ser o responsável pelo operacional interno da empresa. Atuou no projeto mecânico de um sistema de transmissão para a equipe Poli Racing de Fórmula SAE, trabalhou na liga de mercado financeiro da Poli USP e estagiou no HSBC Asset Management Group na área de Macro and Strategy Research (Quantitative Analysis), sendo finalista do Campeonato de Algoritmos para Mercado Financeiro, organizado pela Corretora Souza Barros. Realizou o curso Creativity, Innovation & New Businesses na Fondazione CUOA (Vicenza – Itália).</p>
                     </div>
                   </div>
                   <div class="body">
@@ -358,12 +350,13 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-lg-3">
+
+              <div class="col-md-6 col-lg-3 mb-40">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container">
                     <img src="images/team-member-3.png" alt="">
                     <div class="overlay-bottom">
-                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                      <p class="small margin-clear">Responsável pelo comercial e pelas relações externas da empresa. Atuou na área de vendas na Aiesec-USP. Realizou intercâmbio na Technische Universität Dresden (TUD), na área de automação, com estágio no departamento de sistemas terrestres da Airbus-Alemanha. Participou do Babson Build Summer Program (Boston-EUA) com foco em empreendedorismo.</p>
                     </div>
                   </div>
                   <div class="body">
@@ -377,7 +370,8 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-lg-3">
+
+              <div class="col-md-6 col-lg-3 mb-40">
                 <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
                   <div class="overlay-container">
                     <img src="images/team-member-1.png" alt="">
@@ -396,6 +390,87 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-md-6 col-lg-3 mb-40">
+                <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
+                  <div class="overlay-container">
+                    <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                  </div>
+                  <div class="body">
+                    <h3 class="margin-clear">Team Member</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
+                    <small>Founder</small>
+                    <div class="separator mt-10"></div>
+                    <ul class="social-links circle colored margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/fernando-paes-lopes-97a375126/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6 col-lg-3 mb-40">
+                <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
+                  <div class="overlay-container">
+                    <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                  </div>
+                  <div class="body">
+                    <h3 class="margin-clear">Team Member</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
+                    <small>Founder</small>
+                    <div class="separator mt-10"></div>
+                    <ul class="social-links circle colored margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/fernando-paes-lopes-97a375126/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6 col-lg-3 mb-40">
+                <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
+                  <div class="overlay-container">
+                    <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                  </div>
+                  <div class="body">
+                    <h3 class="margin-clear">Team Member</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
+                    <small>Founder</small>
+                    <div class="separator mt-10"></div>
+                    <ul class="social-links circle colored margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/fernando-paes-lopes-97a375126/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-6 col-lg-3 mb-40">
+                <div class="image-box team-member style-2 shadow-2 bordered mb-20 text-center">
+                  <div class="overlay-container">
+                    <img src="images/team-member-1.png" alt="">
+                    <div class="overlay-bottom">
+                      <p class="small margin-clear">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</p>
+                    </div>
+                  </div>
+                  <div class="body">
+                    <h3 class="margin-clear">Team Member</h3>
+                    <h6 class="margin-clear">Engenharia Mecatrônica<br> (POLI-USP)</h6>
+                    <small>Founder</small>
+                    <div class="separator mt-10"></div>
+                    <ul class="social-links circle colored margin-clear">
+                      <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/fernando-paes-lopes-97a375126/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
@@ -410,6 +485,38 @@
       <!-- footer end -->
     </div>
     <!-- page-wrapper end -->
+
+    <!-- footer start -->
+      <footer id="footer" class="clearfix dark">
+        <div class="footer">
+          <div class="container">
+            <div class="footer-inner">
+              <div class="row justify-content-lg-center">
+                <div class="col-lg-9">
+                  <div class="footer-content text-center padding-ver-clear">
+                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                    <p>Máquinas de Visão e Inteligência Artificial</p>
+                    <ul class="list-inline mb-20">
+                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                      <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
+                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
+                      <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+                    </ul>
+                    <ul class="social-links circle animated-effect-1 margin-clear">
+                      <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+                      <li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
+                      <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li> 
+                    </ul>
+                    <div class="separator"></div>
+                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- footer end -->
 
     <!-- JavaScript files placed at the end of the document so the pages load faster -->
     <!-- ================================================== -->
