--- a/template/page-case-1.html
+++ b/template/page-case-1.html
@@ -333,7 +333,7 @@
             <div class="separator-2"></div>
             <div class="video-case">
               <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=ptsCyDHdj_8"></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aq4SkI2Lck4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
           </div>
@@ -346,7 +346,7 @@
         <div class="container">
           <div class="row">      
             
-            <div class="col-md-4">
+            <div class="col-md-4 mb-40">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
                 <div class="body">
@@ -356,7 +356,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-40">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
                 <div class="body">
@@ -366,7 +366,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-40">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
                 <div class="body">
@@ -376,7 +376,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-40">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
                 <div class="body">
@@ -386,7 +386,7 @@
               </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 mb-40">
               <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                 <span class="icon default-bg small circle"><i class="fa fa-heart-o"></i></span>
                 <div class="body">
