--- a/template/index.html
+++ b/template/index.html
@@ -407,11 +407,11 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 order-lg-2">
-              <div class="overlay-container bordered">
-                <img src="images/about-bg-image.png" alt="">
-                <a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>
-                <div class="overlay-bottom hidden-sm-down">
-                  <div class="text">Assista aos nossos vídeos!</div>
+              <div class="bordered text-center">
+                <img src="images/about-bg-image.png" alt="mvisia-youtube-channel">
+                <!--<a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil" class="overlay-link"><i class="fa fa-link"></i></a>-->
+                <div class="mb-20">
+                  <a class="cta-youtube btn btn-transparent btn-animated" href="https://www.youtube.com/user/MVisiaBrasil">Assista aos nossos vídeos!<i class="fa fa-angle-double-right"></i></a>
                 </div>
               </div>
             </div>
@@ -571,15 +571,15 @@
               <div class="call-to-action">
                 <div class="row">
                   <div class="col-sm-12 text-center">
-                    <h3 class="mt-10 text-muted">Realizamos projetos para o seu negócio. Entre em contato:</h3>
+                    <h3 class="mt-10 text-white">Realizamos projetos para o seu negócio. Entre em contato:</h3>
                   </div>
+                </div>
                 <div class="row">
                   <div class="col-sm-12 text-center">
                     <i class="fa fa-phone pr-2 text-default"></i> (+55)(11) 4302-5902
                     <a href="mailto:contato@mvisia.com.br"><i class="fa fa-envelope-o pr-2 text-default"></i>contato@mvisia.com.br</a>
                     <i class="fa fa-whatsapp pr-2 text-default"></i> (+55) (11) 98134-9727
                   </div>
-                </div>
                 </div>
               </div>
             </div>
@@ -705,6 +705,46 @@
       </section>
       <!-- section end -->
 
+      <!-- section start -->
+      <!-- ================ -->
+      <section class="section dark-bg clearfix">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="call-to-action">
+                <div class="row">
+                  <div class="col-sm-12 text-center">
+                    <h3 class="mt-10 text-white">A MVisia é uma empresa 100% brasileira</h3>
+                  </div>
+                </div>
+                <div class="row">
+                  
+                  <div class="col-md-6">
+                    <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                      <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-1.svg"></img></span>
+                      <div class="body">
+                        <h4 class="title">Soluções sem custos de importação</h4>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="feature-box-2 object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                      <span class="icon default-bg small circle"><img class="icon-circle" src="images/icon-benefit-6.svg"></img></span>
+                      <div class="body">
+                        <h4 class="title">Garantia e assistência técnica capacitada</h4>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>   
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section end -->
+
       <!-- section na mídia start -->     
       <section class="light-gray-bg pv-45 clearfix">
         <div class="container">
@@ -735,13 +775,24 @@
       <div class="main col-md-12">  
         <h2 class="page-title text-center">Contato</strong></h2>
         <div class="separator"></div>
-        <h3 class="page-title text-center">Realizamos projetos sob medida para o seu negócio. Entre em contato:</strong></h3>
-        <ul class="list-inline mb-20">
-          <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-          <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
-          <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
-          <li class="list-inline-item"><a href="" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
-        </ul>
+        
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="page-title text-center">Realizamos projetos sob medida para o seu negócio. Entre em contato:</strong></h3>
+          </div>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <ul class="list-inline mb-40">
+              <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+              <li class="list-inline-item"><a href="tel:+00 1234567890" class="link-dark"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</a></li>
+              <li class="list-inline-item"><a href="mailto:info@theproject.com" class="link-dark"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</a></li>
+              <li class="list-inline-item"><a href="" class="link-dark"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</a></li>
+            </ul>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col-md-12">
               <div id="map-canvas"></div>
