--- a/template/css/custom.css
+++ b/template/css/custom.css
@@ -15,3 +15,8 @@ File Description: Place here your custom CSS styles
 .video-case {
     padding: 30px 150px;
 }
+
+.cta-youtube {
+    font-size: 1.2rem;
+    line-height: 1.25;
+}
