--- a/template/index.html
+++ b/template/index.html
@@ -746,23 +746,63 @@
       <!-- section end -->
 
       <!-- section na mídia start -->     
-      <section class="light-gray-bg pv-45 clearfix">
+      <div class="light-gray-bg pv-45 clearfix">
         <div class="container">
-          <div class="row">
-            <div class="main col-md-12">
+
+            <div class="main">
               <h2 class="page-title text-center">Na Mídia</h2>
               <div class="separator"></div>
-              <div class="row">
-                <div class="col-md-4 ">
-                  <div class="pv-30 ph-20 feature-box bordered shadow text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                    <img class="media-logo" src="images/media-1.svg">
+                
+                <div class="owl-carousel content-slider-with-controls">
+                  
+                  <div class="overlay-visible">
+                    
+                    <div class="row container">
+                      
+                      <div class="col-md-4">
+                        <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                          <img class="media-logo" src="images/media-1.svg">
+                        </div>
+                      </div>
+
+                      <div class="col-md-8">
+                        <h3 class="text-left">Fernando Antonio Torres Velloso da Silva Neto - USP</h3>
+                        <p class="text-left">O Brasil é o maior produtor de eucalipto do mundo. Mesmo assim, esbarra em uma dificuldade: a seleção das mudas de eucalipto para plantio. Para melhorar a eficiência dessa etapa da produção, o aluno de Engenharia Mecatrônica da Universidade de São Paulo (USP), Fernando Antonio Torres Velloso da Silva Neto, junto aos colegas Fernando Lopes e Henrique Oliveira, criou uma máquina que automatiza o processo de determinação do índice de qualidade das mudas, a Seletora de mudas de eucalipto, projeto vencedor do Prêmio Santander Empreendedorismo 2015...</p>
+                      </div>
+
+                      </div>
+
+                    </div>
+
+                  <div class="overlay-container">
+                    
+                    <div class="row container">
+                      
+                      <div class="col-md-4">
+                        <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                          <img class="media-logo" src="images/media-1.svg">
+                        </div>
+                      </div>
+
+                      <div class="col-md-8">
+                        
+                        <h3 class="page-title text-center">Na Mídia</h3>
+                        </div>
+
+                      </div>
+
+                    </div>
+
                   </div>
+
+                  </div>
+                  
                 </div>
-              </div>
+
             </div>
-          </div>
+
         </div>
-      </section>
+      </div>
       <!-- section na mídia end -->
 
       <!-- section contact start -->
