--- a/template/index.html
+++ b/template/index.html
@@ -499,10 +499,10 @@
               </div>
             </div>
             <div class="body">
-              <h3>Tomate</h3>
+              <h3 class="text-white">Tomate</h3>
               <div class="separator"></div>
               <p>Calibradora eletrônica de<br> tomates miúdos</p>
-              <a class="btn btn-transparent btn-animated" href="page-case-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated text-white" href="page-case-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -515,10 +515,10 @@
               </div>
             </div>
             <div class="body">
-              <h3>Uva</h3>
+              <h3 class="text-white">Uva</h3>
               <div class="separator"></div>
               <p>Sistema automático de<br> qualificação de uvas</p>
-              <a class="btn btn-transparent btn-animated" href="page-case-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated text-white" href="page-case-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -531,10 +531,10 @@
               </div>
             </div>
             <div class="body">
-              <h3>Eucalipto</h3>
+              <h3 class="text-white">Eucalipto</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas florestais</p>
-              <a class="btn btn-transparent btn-animated" href="page-case-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated text-white" href="page-case-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -547,10 +547,10 @@
               </div>
             </div>
             <div class="body">
-              <h3>Flores</h3>
+              <h3 class="text-white">Flores</h3>
               <div class="separator"></div>
               <p>Seletora automática de<br> mudas de flores</p>
-              <a class="btn btn-transparent btn-animated" href="page-case-4.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+              <a class="btn btn-transparent btn-animated text-white" href="page-case-4.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
             </div>
           </div>
         </div>
@@ -746,13 +746,13 @@
       <!-- section end -->
 
       <!-- section na mídia start -->     
-      <div class="light-gray-bg pv-45 clearfix">
+      <div class="light-gray-bg pv-45 clearfix" style="background-image:url(images/benefits-bg-image.png);">
         <div class="container">
-
             <div class="main">
               <h2 class="page-title text-center">Na Mídia</h2>
               <div class="separator"></div>
-                
+                <div class="row">
+
                 <div class="owl-carousel content-slider-with-controls">
                   
                   <div class="overlay-visible">
@@ -760,12 +760,12 @@
                     <div class="row container">
                       
                       <div class="col-md-4">
-                        <div class="pv-30 ph-20 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
+                        <div class="pv-30 phl-40 feature-box text-center object-non-visible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
                           <img class="media-logo" src="images/media-1.svg">
                         </div>
                       </div>
 
-                      <div class="col-md-8">
+                      <div class="col-md-8 pv-30 phr-40">
                         <h3 class="text-left">Fernando Antonio Torres Velloso da Silva Neto - USP</h3>
                         <p class="text-left">O Brasil é o maior produtor de eucalipto do mundo. Mesmo assim, esbarra em uma dificuldade: a seleção das mudas de eucalipto para plantio. Para melhorar a eficiência dessa etapa da produção, o aluno de Engenharia Mecatrônica da Universidade de São Paulo (USP), Fernando Antonio Torres Velloso da Silva Neto, junto aos colegas Fernando Lopes e Henrique Oliveira, criou uma máquina que automatiza o processo de determinação do índice de qualidade das mudas, a Seletora de mudas de eucalipto, projeto vencedor do Prêmio Santander Empreendedorismo 2015...</p>
                       </div>
@@ -774,7 +774,7 @@
 
                     </div>
 
-                  <div class="overlay-container">
+                  <div class="overlay-visible">
                     
                     <div class="row container">
                       
@@ -796,7 +796,7 @@
                   </div>
 
                   </div>
-                  
+                </div>
                 </div>
 
             </div>
